--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "scripts": {
     "start-front": "cd website&npm run start",
     "start-server": "cd server&npm run start",
-    "dev-server": "cd server& nodemon run start"
+    "dev-server": "cd server&npm run dev"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.4.0"
   }
 }
