--- a/server/package.json
+++ b/server/package.json
@@ -9,14 +9,13 @@
     "sqlite3": "^5.1.7"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "dev": "set BRWOSER=none&nodemon run server.js",
-    "start": "set BRWOSER=none&node server.js"
+    "dev": "nodemon run server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite": "^5.1.1"
   },
