--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
+    "install-server": "cd server&npm install",
+    "install": "cd website&npm install",
+    "build":"cd website&npm run build",
     "start-front": "cd website&npm run start",
     "start-server": "cd server&npm run start",
     "dev-server": "cd server&npm run dev"
