--- a/server/package.json
+++ b/server/package.json
@@ -9,15 +9,20 @@
     "sqlite3": "^5.1.7"
   },
   "scripts": {
-    "dev": "nodemon run server.js",
-    "start": "node server.js"
+    "pg": "db-migrate up --config database.json -e dev",
+    "dev": "yarn pg &nodemon run server.mjs",
+    "start": "yarn pg&node server.mjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "db-migrate-pg": "^1.5.2",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "postgres": "^3.4.3",
     "sqlite": "^5.1.1"
   },
-  "type": "module"
+  "type": "commonjs"
 }
