deploy postgresql db on render and fix issue

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
-DB_HOST=localhost
+DB_HOST=dpg-cn2hnlmd3nmc739dvjqg-a.oregon-postgres.render.com
 DB_PORT=5432
-DB_USER=kerolosDev
-DB_PASS=kerolos6
-DB_NAME=wiki
+DB_USER=wiki_j2qc_user
+DB_PASS=AZcqx3un05TbEY4DfcmmECEMhxrbYcms
+DB_NAME=wiki_j2qc
 NODE_ENV=dev
+URL_SERVER=https://wiki-api-ptyn.onrender.com
