--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "pg": "^8.11.3",
-    "postgres": "^3.4.3",
-    "sqlite": "^5.1.1"
+    "postgres": "^3.4.3"
   },
   "type": "commonjs"
 }
